--- a/module1/index.html
+++ b/module1/index.html
@@ -61,6 +61,7 @@
                     <a href="#">
                         <img class="nav_img" src="img/Logo.png" alt="logo">
                     </a>
+                    <!-- Ежели тут будет 5 ссылок верстка сломается -->
                     <ul class="nav_links">
                         <li><a href="#" class="nav_link fw700">About</a></li>
                         <li><a href="#help" class="nav_link">Help</a></li>
@@ -70,6 +71,7 @@
             </div>
         </nav>
         <div class="container">
+            <!-- Использование BR не ОК -->
             <h1 class="promo__title fw700">Save your data <br>
                 storage here.
             </h1>
